--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "ts-jest": "^24.0.2",
         "ts-loader": "^6.0.4",
         "ts-node": "3.3.0",
-        "typescript": "3.3.3333",
+        "typescript": "^3.9.2",
         "webpack": "^4.35.0",
         "webpack-cli": "^3.3.5",
         "webpack-dev-server": "^3.7.2",
