--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "baseUrl": ".",
         "paths": {
             "*": ["node_modules/*", "src/types/*"]
-        }
+        },
+        "lib": ["esnext.asynciterable"]
     },
     "include": ["src/**/*"]
 }
